src/styles.scss
@use '~@fortawesome/fontawesome-free/scss/fontawesome';
@use '~@fortawesome/fontawesome-free/scss/solid';
@use '~@fortawesome/fontawesome-free/scss/brands';
@use '~@ukho/design-system/styles/core.scss';
.skip-to-content-link {
	left: 47%;
    position: absolute;
    transform: translateY(-100%);
    background: #15315b;
    padding: 10px;
    border: none;
    box-shadow: none;
    color: #fff;
	&:focus {
		transform: translateY(20%);
	}
}
p{
	color: #333;
}
.sr-only {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0,0,0,0);
	border: 0;
}
select{
	border-radius: 0;
}

ukho-dialogue section {
    margin: 0 0 10px 0;
}

#mainContainer {
	.header-image {
		width: 100%;
		display: inherit;
		height: 240px;
		background: url(/assets/images/UKHO-1400x240.jpg) center center;
		background-repeat: no-repeat;
		background-size: cover;
	}
	ukho-card{
	p {
		font-size: x-large;
		font-weight: 300;
		margin-bottom: 20px;
	}
	button{
		float: left;
	}
	a#fss-createaccount {
		padding: 20px 0  20px 40px;
		float: left;
		&:hover {
			text-decoration: none;
		}
	}
}}

ukho-phase-banner.phasebanner {
	padding: 10px;
	width: auto;
}

button.fileDownload{
	background: transparent;
}

.container {
	width: 90%;
	margin:0 auto ;
	padding: 10px 0;
	h1 {
		// padding-left: 30px;
		margin-bottom: 10px;
	}
	p {
		// padding-left: 30px;
		margin-bottom: 20px;
	}	
	h3 {
		margin-top: 20px;
		margin-bottom: 20px;
	}
}

ukho-expansion{
	section.expansion.bordered{
		border-bottom: none !important;
	}
}

.querytable, .attribute-table, .system-attribute-table {
	border-spacing: 10px;
	width: 100%;
	text-align: center;
	border: none;
	margin: 0;
	thead, th,td{
		border:none;
	}
	ukho-typeahead{
		text-align: left;
	}
	.form-field-label{
		display: flex!important;
	}
}

table{
    width: 100%;
    text-align: left;
	th{
		font-size: medium;
	}
	
	td{
		font-size: large;
		font-weight: 400;
	}
}

table.attribute-table, .system-attribute-table{
    table-layout: fixed !important;	
	margin-bottom: 0;
	border-spacing:0;
	text-align: left;
	tr:nth-child(1n){
		background: none;
	}
		
	th, td{
		width: fit-content;
		padding: 5px;
	}
}

ukho-expansion{
	section{
		border-bottom: none;
	}
}

.result-margin{
	margin-top:20px;
}

table.cdk-table td>div {
    font-weight: 400;
}

table.cdk-table th, table.cdk-table td{
    color: #221f1c !important;
}

.fa-check{
	color: #4aab37;
	background: transparent;
}

.searchSection {
	display: flex;
	flex-direction: row;
	margin-bottom: 10px;
	padding: 0 42px;
	strong {
		cursor: pointer;
	}
	.searchBtn {
		display: flex;
		flex-direction: row-reverse;
		flex-grow: 1;

		.switchToSimplified{
			display: flex;
			align-self: center;
			margin-right: 25px;
			color: #000;
			font-weight: 400;
			cursor: pointer;
			text-decoration: underline;
		}
	}
}

.pageOverlay{
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  z-index: 9999;
  background-color: rgba(0,0,0,.4);
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

.searchFieldsRow {
	text-align: left;
	font-weight: 500;
}


.searchFieldBold {
	font-weight: 500;
	text-align: left;
}

.spinner-wrapper {
    position: fixed;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 0;
    left: 0;
    background-color: rgba(80, 74, 74, 0.5);
    z-index: 998;
    app-spinner {
        width: 6rem;
        height: 6rem;
    }
}


button{
	&.delete, &.delete:hover, &.addNewLine, &.addNewLine:hover,&.backToEditor, &.backToEditor:hover, &.loginAction, &.loginAction:hover, &.popular-search,
	&.popular-search:hover {
		background: #fff;
    	border: none;
    	min-width: auto;
		height: auto;
    	padding: 0;
		font-weight: 400;
		color: #000;
		i {
    	color: #000;
    	padding: 0;
	}
	&.addNewLine,&.backToEditor{
		font-size: 18px;
		i{
			padding: 0 5px 0 0;
		}
	}
	&.backToEditor i{
		color: #09315b;
		position: relative;
		top:2px;
	}
	&.backToEditor, &.backToEditor:hover{
		color: #09315b;
	}
}}

.valueTD{
	text-align: left;
	
	ukho-textinput{
	&[ng-reflect-type="date"], &[ng-reflect-type="time"] {
		display: inline-block;
		width: 47%;
		margin: 0 10px 0 0;
		vertical-align: top;
	}
	&.validated, &.invalid {
		input.form-text-input{
		padding-right: 0;
	}
	}
}

ukho-textinput.text-input-wrap{
	&[ng-reflect-type="date"] {
		display: inline-block;
		width: 43%;
	input {
		padding-right: 3%;
	}
}
	&[ng-reflect-type="time"]{
		width: 45%;
		display: inline-block;
		left: 7%;
	
}
}
	
}


.siplifideSearchBtn button.primary{
	margin-top: 28px;
    height: 55px;
}

ukho-textinput.text-input-wrap .error-text{
	display: none;
}

[tabindex="-1"]:focus-visible{
	border:none;
	outline: none;
}

#contentArea{
	min-height:385px
}




@media screen and (min-width:1700px){
	ukho-footer {position: fixed;bottom: 0;width: 100%;}
	#contentArea{
		margin-bottom:150px ;
	}
}

@media screen and (max-width:1024px){
	.valueTD {
		ukho-textinput.text-input-wrap{
		&[ng-reflect-type=date]{
		padding-left: 5px;
		input{
			padding-left:5px;
		}
	}
	&[ng-reflect-type=time]{
		width: 42%;
		left: 6%;
	}
 }
 }
	#mainContainer {
	.header-image {
		height: 240px;
		background: url(/assets/images/UKHO-17-AW-0005-Web.jpg) center center;
	}
}
}

.SearchBatch{
	cursor: pointer;
	width: 35%;
	.popular-search-para{
		margin-bottom: 20px;
		button{
			float: right;
		}
	}
}

.system-attribute-table
{
	margin-bottom: 20px;
	table-layout: auto !important;
}

.expansionLabel label {
	margin-left: auto;
    width: 290px;
}

